# toy-os

./: .astylerc  .bochsrc  .gdbinit  .gitignore  CMakeLists.txt  Lessons.txt  Makefile  Makefile.am  README  README.md  base.mk  build_toolchain.sh  clean.sh  config.sh  configure.ac  copy_image.debugfs  create-disk.sh  debug.sh  depcheck.mk  disk-mount.sh  disk-unmount.sh  fd.img.xz  grub.cfg  hd.img.xz  hd.txt  iso.sh  qemu.sh  setup.txt  usetoolchain
boot/: Makefile  console.c  console.h  idt.asm  interrupts.c  kernel.ld.S  multiboot.asm  paging.asm  printing.asm
cmake/: make_debug_targets.cmake
include/: Makefile  config.h  cpuid.h  elf.h  gdb.h  gdt.h  interrupts.h  io.h  kmain.h  main.h  memalloc.h  memkalloc.h  paging.h  print_basic.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h  types.h
include/boot/: addresses.h  boot.h
include/kernel/: .gitignore  Makefile  assembly.h  cpuid.h  interrupt_handlers.h  interrupts.h  interrupts.in  kmain.h  logging.h  memory.h  multiboot.h  paging.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  video.h
include/kernel/boot/: addresses.h
interrupts/: .gitignore  Makefile  debug_exception.asm  device_not_available_exception.asm  divide_error_exception.asm  interrupts.c  invalid_opcode_exception.asm  invalid_tss_exception.asm  nmi_interrupt.asm  page_fault_exception.asm  segment_not_present_exception.asm  simd_floating_point_exception.asm
kernel/: .gitignore  CMakeLists.txt  Makefile  basicpaging.asm  console.c  idt.asm  interrupt_entries.asm  interrupts.cpp  interrupts.h  kmain.cpp  logging.cpp  memory.cpp  multiboot.asm  paging.c  paging.cpp  paging.h  paging_interrupts.cpp
kernel/arch/x86_64/: CMakeLists.txt  addresses.h  crti.asm  crtn.nasm  interrupt_entries.asm  linker.ld  linker.ld.S  make.config  multiboot2.asm  tty.cpp
kernel/arch/x86_64/pc/: CMakeLists.txt  Makefile  addresses.h  crti.nasm  crtn.nasm  entry64.nasm  idt.nasm  linker.ld.S  multiboot2.nasm  multiboot_signature.cpp  setup_gdt.nasm  setup_idt.nasm  setup_long_mode.nasm  setup_paging.nasm
kernel/include/kernel/: abi.hpp  config.h  config.h.in  config.hpp  early_video.h  main.h  main.hpp  multiboot2.h  multiboot_utils.h  multiboot_utils.hpp  paging.hpp  tty.h  vga.h
kernel/kernel/: CMakeLists.txt  Makefile  abi.cpp  early_video.cpp  kernel.c  main.cpp  multiboot_utils.cpp  paging.cpp  paging.hpp
lib/: Makefile  memory.cpp  memory.h  printf.c  string.asm  string2.cpp
libc/: CMakeLists.txt  Makefile
libc/include/sys/: cdefs.h
libc/stdio/: CMakeLists.txt  printf.c  putchar.c
libc/stdlib/: CMakeLists.txt  abort.c
libc/string/: CMakeLists.txt  memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
scripts/: build.sh  clean.sh  config.sh  create-disk.sh  disk-mount.sh  disk-unmount.sh  mount-disk.sh  qemu.sh  umount-disk.sh
scripts/old/: allclean.sh  default-host.sh  headers.sh  qemu.sh
src/: .gitignore  Makefile  boot.cpp  gdb.c  idt.asm  idt.h  idt.s  interrupts.c  kdebug.h  kmain.cpp  kprintf.cpp  kprintf.h  kstdarg.h  linkerScript  main.h  memalloc.c  memkalloc.c  multiboot.asm  multiboot.h  multiboot.s  multiboot_header.cpp  paging.asm  paging.c  paging.s  printing.asm  printing.s  string.asm  testFunctions.h  types.h
src/interrupts/: Makefile  alignment_check_exception.asm  bound_range_exceeded_exception.asm  breakpoint_exception.asm  debug_exception.asm  device_not_available_exception.asm  divide_error_exception.asm  double_fault_exception.asm  general_protection_exception.asm  invalid_opcode_exception.asm  invalid_tss_exception.asm  machine_check_exception.asm  nmi_interrupt.asm  overflow_exception.asm  page_fault_exception.asm  segment_not_present_exception.asm  simd_floating_point_exception.asm  stack_fault_exception.asm  store_print_regs.asm  x87_fpu_floating_point_error.asm
src/memory/: .gitignore  Makefile  buddyAllocator.cpp  buddyAllocator.h  buddyAllocatorTest.cpp  memory.cpp  memory.h  paging.cpp  paging.h  pagingInternals.cpp  stackAllocator.cpp
